chore: add raycast tools

--- a/home/.chezmoiexternal.toml
+++ b/home/.chezmoiexternal.toml
@@ -4,6 +4,12 @@
     exact = true
     stripComponents = 1
     refreshPeriod = "168h"
+[".config/raycast/scripts-commands"]
+    type = "archive"
+    url = "https://github.com/raycast/script-commands/archive/master.tar.gz"
+    exact = true
+    stripComponents = 1
+    refreshPeriod = "168h"
 [".oh-my-zsh"]
     type = "archive"
     url = "https://github.com/ohmyzsh/ohmyzsh/archive/master.tar.gz"
