Add Neovim config based on LazyVim

--- a/home/dot_config/kitty/executable_kitty.conf
+++ b/home/dot_config/kitty/executable_kitty.conf
@@ -21,7 +21,7 @@
 
 #:     font_family      Operator Mono Book
 #:     bold_font        Operator Mono Medium
-#:     italic_font      Operator Mono Book Italic
+#:     italic_font      Opzerator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
 # font_size 11.0
@@ -82,7 +82,6 @@
 #:     symbol_map codepoints Font Family Name
 
 # Nerd Fonts v2.2.2
-symbol_map U+23FB-U+23FE,U+2665,U+26A1,U+2B58,U+E000-U+E00A,U+E0A0-U+E0A3,U+E0B0-U+E0C8,U+E0CA,U+E0CC-U+E0D2,U+E0D4,U+E200-U+E2A9,U+E300-U+E3E3,U+E5FA-U+E634,U+E700-U+E7C5,U+EA60-U+EBEB,U+F000-U+F2E0,U+F300-U+F32F,U+F400-U+F4A9,U+F500-U+F8FF Symbols Nerd Font Mono
 
 # narrow_symbols
 
@@ -646,7 +645,6 @@ symbol_map U+23FB-U+23FE,U+2665,U+26A1,U+2B58,U+E000-U+E00A,U+E0A0-U+E0A3,U+E0B0
 #: as number of cells instead of pixels.
 
 # enabled_layouts *
-
 #: The enabled window layouts. A comma separated list of layout names.
 #: The special value all means all layouts. The first listed layout
 #: will be used as the startup layout. Default configuration is all
@@ -2064,13 +2062,61 @@ symbol_map U+23FB-U+23FE,U+2665,U+26A1,U+2B58,U+E000-U+E00A,U+E0A0-U+E0A3,U+E0B0
 
 shell_integration     enabled
 term                  xterm-kitty
+allow_remote_control  yes
+listen_on             unix:/tmp/mykitty
+export KITTY_LISTEN_ON=unix:/tmp/mykitty-$PPID
 
 # Font settings
 
 font_size             14.0
 adjust_line_height    3
 font_family           MonoLisa Variable
-italic_font           MonoLisa Variable Italic
+
+###########################################################
+# Symbols Nerd Font complete symbol_map
+# easily troubleshoot missing/incorrect characters with:
+#   kitty --debug-font-fallback
+###########################################################
+
+# "Nerd Fonts - Pomicons"
+symbol_map  U+E000-U+E00D Symbols Nerd Font
+
+# "Nerd Fonts - Powerline"
+symbol_map U+e0a0-U+e0a2,U+e0b0-U+e0b3 Symbols Nerd Font
+
+# "Nerd Fonts - Powerline Extra"
+symbol_map U+e0a3-U+e0a3,U+e0b4-U+e0c8,U+e0cc-U+e0d2,U+e0d4-U+e0d4 Symbols Nerd Font
+
+# "Nerd Fonts - Symbols original"
+symbol_map U+e5fa-U+e62b Symbols Nerd Font
+
+# "Nerd Fonts - Devicons"
+symbol_map U+e700-U+e7c5 Symbols Nerd Font
+
+# "Nerd Fonts - Font awesome"
+symbol_map U+f000-U+f2e0 Symbols Nerd Font
+
+# "Nerd Fonts - Font awesome extension"
+symbol_map U+e200-U+e2a9 Symbols Nerd Font
+
+# "Nerd Fonts - Octicons"
+symbol_map U+f400-U+f4a8,U+2665-U+2665,U+26A1-U+26A1,U+f27c-U+f27c Symbols Nerd Font
+
+# "Nerd Fonts - Font Linux"
+symbol_map U+F300-U+F313 Symbols Nerd Font
+
+#  Nerd Fonts - Font Power Symbols"
+symbol_map U+23fb-U+23fe,U+2b58-U+2b58 Symbols Nerd Font
+
+#  "Nerd Fonts - Material Design Icons"
+symbol_map U+f500-U+fd46 Symbols Nerd Font
+
+# "Nerd Fonts - Weather Icons"
+symbol_map U+e300-U+e3eb Symbols Nerd Font
+
+# Misc Code Point Fixes
+symbol_map U+21B5,U+25B8,U+2605,U+2630,U+2632,U+2714,U+E0A3,U+E615,U+E62B Symbols Nerd Font
+
 
 # Window config
 
@@ -2092,6 +2138,8 @@ tab_bar_style               powerline
 
 scrollback_lines 4000
 
+# enabled_layouts *
+# enabled_layouts horizontal
 
 # NightOwl theme
 # color0                    #011627
@@ -2126,9 +2174,9 @@ map cmd+v           paste_from_clipboard
 map cmd+t           new_tab_with_cwd
 # open new split (window) with cmd+d retaining the cwd
 map cmd+w           close_window
-map cmd+shif+n      new_os_window
+map shift+cmd+n     new_os_window
 map cmd+d           launch --location=hsplit --cwd=current
-map cmd+shift+d     launch --location=vsplit --cwd=current
+map shift+cmd+d     launch --location=vsplit --cwd=current
 # jump to beginning and end of word
 map alt+left        send_text all \x1b\x62
 map alt+right       send_text all \x1b\x66
@@ -2143,6 +2191,6 @@ map alt+backspace   send_text all \x17
 map cmd+backspace   send_text all \x15
 
 # BEGIN_KITTY_THEME
-# Night Owl
+# Vim Nightfly - Miszo
 include current-theme.conf
 # END_KITTY_THEME
