Change test running plugin for nvim

--- a/home/dot_config/kitty/executable_kitty.conf
+++ b/home/dot_config/kitty/executable_kitty.conf
@@ -2087,6 +2087,8 @@ tab_bar_edge                top
 tab_title_template          "{title}"
 active_tab_title_template   "{title}"
 tab_bar_style               powerline
+tab_powerline_style         slanted
+tab_title_template          {title}{' :{}:'.format(num_windows) if num_windows > 1 else ''}
 # active_tab_foreground     #22da6e
 # active_tab_background     #44596b
 # inactive_tab_foreground   #7fdbca
