Update nvim configuration

--- a/home/dot_config/kitty/executable_kitty.conf
+++ b/home/dot_config/kitty/executable_kitty.conf
@@ -2066,6 +2066,9 @@ allow_remote_control  yes
 listen_on             unix:/tmp/mykitty
 export KITTY_LISTEN_ON=unix:/tmp/mykitty-$PPID
 
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
+
 # Font settings
 
 font_size             14.0
