fix: font ligatures in kitty and nvim

--- a/home/.chezmoiignore
+++ b/home/.chezmoiignore
@@ -48,6 +48,9 @@ README.md
 .config/zsh/.zsh_sessions
 .zsh_sessions
 
+# Neovim lock files
+.config/nvim/lazy-lock.json
+
 # Ignore MacOS files
 .CFUserTextEncoding
 .DS_Store
