--- a/home/dot_config/kitty/executable_kitty.conf
+++ b/home/dot_config/kitty/executable_kitty.conf
@@ -2074,6 +2074,31 @@ set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{25
 font_size             14.0
 adjust_line_height    3
 font_family           MonoLisa Variable
+disable_ligatures     never
+
+font_features MonoLisaVariable-Regular               +calt +liga +ss02
+font_features MonoLisaVariable-Italic                +calt +liga +ss02
+font_features MonoLisaVariable-Italic                +calt +liga +ss02
+
+font_features MonoLisaVariableRegular-Black          +calt +liga +ss02
+font_features MonoLisaVariableItalic-Black           +calt +liga +ss02
+font_features MonoLisaVariableRegular-Bold           +calt +liga +ss02
+font_features MonoLisaVariableItalic-Bold            +calt +liga +ss02
+font_features MonoLisaVariableRegular-ExtraBold      +calt +liga +ss02
+font_features MonoLisaVariableItalic-ExtraBold       +calt +liga +ss02
+font_features MonoLisaVariableRegular-ExtraLight     +calt +liga +ss02
+font_features MonoLisaVariableItalic-ExtraLight      +calt +liga +ss02
+font_features MonoLisaVariable-Italic                +calt +liga +ss02
+font_features MonoLisaVariableRegular-Light          +calt +liga +ss02
+font_features MonoLisaVariableItalic-Light           +calt +liga +ss02
+font_features MonoLisaVariableRegular-Medium         +calt +liga +ss02
+font_features MonoLisaVariableItalic-Medium          +calt +liga +ss02
+font_features MonoLisaVariable-Regular               +calt +liga +ss02
+font_features MonoLisaVariableRegular-SemiBold       +calt +liga +ss02
+font_features MonoLisaVariableItalic-SemiBold        +calt +liga +ss02
+font_features MonoLisaVariableRegular-Thin           +calt +liga +ss02
+font_features MonoLisaVariableItalic-Thin            +calt +liga +ss02
+
 
 include symbol-map.conf
 
