--- a/home/dot_config/exact_kitty/executable_kitty.conf
+++ b/home/dot_config/exact_kitty/executable_kitty.conf
@@ -6,10 +6,6 @@ allow_remote_control  yes
 listen_on             unix:/tmp/mykitty
 #export KITTY_LISTEN_ON=unix:/tmp/mykitty-$PPID
 
-
-set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
-set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
-
 # Font settings
 
 font_size             14.0
@@ -52,13 +48,11 @@ hide_window_decorations     no
 macos_thicken_font          0.75
 # active_border_color         none
 
-tab_bar_edge                top
-tab_title_template          "{title}"
-active_tab_title_template   "{title}"
+tab_bar_min_tabs            1
+tab_bar_edge                bottom
 tab_bar_style               powerline
 tab_powerline_style         slanted
 tab_title_template          {title}{' :{}:'.format(num_windows) if num_windows > 1 else ''}
-# active_tab_foreground     #22da6e
 # active_tab_background     #44596b
 # inactive_tab_foreground   #7fdbca
 # inactive_tab_background   #44596b
@@ -99,6 +93,5 @@ map ctrl+h kitten pass_keys.py left   ctrl+h
 map ctrl+l kitten pass_keys.py right  ctrl+l
 
 # BEGIN_KITTY_THEME
-# Vim Nightfly - Miszo
-include current-theme.conf
+include themes/Catppuccin-Mocha.conf
 # END_KITTY_THEME
