--- a/home/dot_config/exact_kitty/executable_kitty.conf
+++ b/home/dot_config/exact_kitty/executable_kitty.conf
@@ -44,18 +44,15 @@ include symbol-map.conf
 draw_minimal_borders        yes
 inactive_text_alpha         0.7
 hide_window_decorations     no
-# macos_titlebar_color        background
 macos_thicken_font          0.75
-# active_border_color         none
+macos_window_resizable      yes
+macos_titlebar_color        background
 
 tab_bar_min_tabs            1
 tab_bar_edge                bottom
 tab_bar_style               powerline
 tab_powerline_style         slanted
 tab_title_template          {title}{' :{}:'.format(num_windows) if num_windows > 1 else ''}
-# active_tab_background     #44596b
-# inactive_tab_foreground   #7fdbca
-# inactive_tab_background   #44596b
 
 scrollback_lines 4000
 
