chore: symbols font mapping

--- a/home/dot_config/exact_kitty/executable_kitty.conf
+++ b/home/dot_config/exact_kitty/executable_kitty.conf
@@ -89,6 +89,9 @@ map ctrl+k kitten pass_keys.py top    ctrl+k
 map ctrl+h kitten pass_keys.py left   ctrl+h
 map ctrl+l kitten pass_keys.py right  ctrl+l
 
+# include symbol-map.conf
+include symbol-map.conf
+
 # BEGIN_KITTY_THEME
 include themes/Catppuccin-Mocha.conf
 # END_KITTY_THEME
