--- a/home/dot_config/exact_kitty/executable_symbol-map.conf
+++ b/home/dot_config/exact_kitty/executable_symbol-map.conf
@@ -1,40 +1,46 @@
-# Nerd Fonts - Pomicons
-symbol_map U+e000-U+e00d Symbols Nerd Font
+# - Use additional nerd symbols
+# See https://github.com/be5invis/Iosevka/issues/248
+# See https://github.com/ryanoasis/nerd-fonts/wiki/Glyph-Sets-and-Code-Points
 
-# Nerd Fonts - Powerline
-symbol_map U+e0a0-U+e0a2,U+e0b0-U+e0b3 Symbols Nerd Font
+# Seti-UI + Custom
+symbol_map U+E5FA-U+E6AC Symbols Nerd Font Mono
 
-# Nerd Fonts - Powerline Extra
-symbol_map U+e0a3-U+e0a3,U+e0b4-U+e0c8,U+e0cc-U+e0d2,U+e0d4-U+e0d4 Symbols Nerd Font
+# Devicons
+symbol_map U+E700-U+E7C5 Symbols Nerd Font Mono
 
-# Nerd Fonts - Symbols original
-symbol_map U+e5fa-U+e62b Symbols Nerd Font
+# Font Awesome
+symbol_map U+F000-U+F2E0 Symbols Nerd Font Mono
 
-# Nerd Fonts - Devicons
-symbol_map U+e700-U+e7c5 Symbols Nerd Font
-symbol_map U+eb66 Symbols Nerd Font
+# Font Awesome Extension
+symbol_map U+E200-U+E2A9 Symbols Nerd Font Mono
 
-# Nerd Fonts - Font awesome
-symbol_map U+f000-U+f2e0 Symbols Nerd Font
+# Material Design Icons
+symbol_map U+F0001-U+F1AF0 Symbols Nerd Font Mono
 
-# Nerd Fonts - Font awesome extension
-symbol_map U+e200-U+e2a9 Symbols Nerd Font
+# Weather
+symbol_map U+E300-U+E3E3 Symbols Nerd Font Mono
 
-# Nerd Fonts - Octicons
-symbol_map U+f400-U+f4a8,U+2665-U+2665,U+26A1-U+26A1,U+f27c-U+f27c Symbols Nerd Font
+# Octicons
+symbol_map U+F400-U+F532,U+2665,U+26A1 Symbols Nerd Font Mono
 
-# Nerd Fonts - Font Logos
-symbol_map U+f300-U+f313 Symbols Nerd Font
+# Powerline Symbols
+symbol_map U+E0A0-U+E0A2,U+E0B0-U+E0B3 Symbols Nerd Font Mono
 
-# Nerd Fonts - Font Power Symbols
-symbol_map U+23fb-U+23fe,U+2b58-U+2b58 Symbols Nerd Font
+# Powerline Extra Symbols
+symbol_map U+E0A3,U+E0B4-U+E0C8,U+E0CA,U+E0CC-U+E0D4 Symbols Nerd Font Mono
 
-# Nerd Fonts - Material Design Icons
-symbol_map U+f500-U+fd46 Symbols Nerd Font
+# IEC Power Symbols
+symbol_map U+23FB-U+23FE,U+2B58 Symbols Nerd Font Mono
 
-# Nerd Fonts - Weather Icons
-symbol_map U+e300-U+e3eb Symbols Nerd Font
+# Font Logos
+symbol_map U+F300-U+F32F Symbols Nerd Font Mono
 
-# Nerd Fonts - All
-symbol_map U+e000-U+e00d,U+e0a0-U+e0a2,U+e0b0-U+e0b3,U+e0a3-U+e0a3,U+e0b4-U+e0c8,U+e0cc-U+e0d2,U+e0d4-U+e0d4,U+e5fa-U+e62b,U+e700-U+e7c5,U+f000-U+f2e0,U+e200-U+e2a9,U+f400-U+f4a8,U+2665-U+2665,U+26A1-U+26A1,U+f27c-U+f27c,U+f300-U+f313,U+23fb-U+23fe,U+2b58-U+2b58,U+f500-U+fd46,U+e300-U+e3eb Symbols Nerd Font
+# Pomicons
+symbol_map U+E000-U+E00A Symbols Nerd Font Mono
 
+# Codicons
+symbol_map U+EA60-U+EBEB Symbols Nerd Font Mono
+
+# Additional sets
+symbol_map U+E276C-U+E2771 Symbols Nerd Font Mono # Heavy Angle Brackets
+symbol_map U+2500-U+259F Symbols Nerd Font Mono # Box Drawing
