--- a/home/.chezmoiexternal.toml
+++ b/home/.chezmoiexternal.toml
@@ -99,3 +99,7 @@ refreshPeriod = "168h"
 type = "file"
 url = "https://raw.githubusercontent.com/catppuccin/kitty/main/themes/mocha.conf"
 refreshPeriod = "168h"
+[".config/yazi/theme.toml"]
+type = "file"
+url = "https://raw.githubusercontent.com/catppuccin/yazi/main/themes/mocha.toml"
+refreshPeriod = "168h"
