feat: move data access from templates to data

--- a/home/.chezmoiignore
+++ b/home/.chezmoiignore
@@ -68,14 +68,14 @@ Support
 
 **/.DS_Store
 
-{{ if not .isWork -}}
+{{ if not .computer.isWork -}}
 .config/glab-cli
 .config/op/plugins/used_items/glab.json
 .config/op/plugins/glab.json
 .gemrc
 {{ end -}}
 
-{{ if .isWork -}}
+{{ if .conmputer.isWork -}}
 .ssh/homelab.pub
 .ssh/unifi.pub
 {{ end -}}
