chore: change border colors

--- a/home/dot_config/exact_private_aerospace/aerospace.toml
+++ b/home/dot_config/exact_private_aerospace/aerospace.toml
@@ -12,7 +12,7 @@ after-login-command = []
 # 'after-startup-command' is run after 'after-login-command'
 # Available commands : https://nikitabobko.github.io/AeroSpace/commands
 after-startup-command = [
-  'exec-and-forget borders active_color=0xffa6e3a1 inactive_color=0xff45475a width=5.0',
+  'exec-and-forget borders active_color=0xffcba6f7 inactive_color=0xff45475a width=5.0',
 ]
 
 # Start AeroSpace at login
