--- a/home/dot_config/exact_private_aerospace/aerospace.toml
+++ b/home/dot_config/exact_private_aerospace/aerospace.toml
@@ -56,24 +56,24 @@ on-focus-changed = 'move-mouse window-lazy-center'
 [gaps]
 inner.horizontal = 8
 inner.vertical = 8
-outer.left = 12
-outer.bottom = 12
-outer.top = [{monitor.'built-in' = 6 }, 12]
-outer.right = 12
+outer.left = 8
+outer.bottom = 8
+outer.top = 8
+outer.right = 8
 
 
 # 1 | Built-in Retina Display
 # 2 | LG HDR 4K
 # 3 | LG SDQHD
 [workspace-to-monitor-force-assignment]
-1 = 'main'
-T = 'main'
-W = 'main'
-B = 'SDQHD'
-D = 'SDQHD'
-M = 'SDQHD'
-V = 'SDQHD'
-X = 'built-in'
+'1️⃣' = 'main'
+'📟' = 'main'
+'⚒️' = 'main'
+'🌐' = 'SDQHD'
+'🎨' = 'SDQHD'
+'📧' = 'SDQHD'
+'🖥️' = 'SDQHD'
+'💬' = 'built-in'
 
 # 'main' binding mode declaration
 # See: https://nikitabobko.github.io/AeroSpace/guide#binding-modes
@@ -116,45 +116,40 @@ alt-shift-k = 'move up'
 alt-shift-l = 'move right'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#workspace
-alt-1 = 'workspace 1'
-alt-2 = 'workspace 2'
-alt-3 = 'workspace 3'
-alt-4 = 'workspace 4'
-alt-5 = 'workspace 5'
-alt-6 = 'workspace 6'
-alt-7 = 'workspace 7'
-alt-8 = 'workspace 8'
-alt-9 = 'workspace 9'
-alt-b = 'workspace B'
-alt-d = 'workspace D'
-alt-m = 'workspace M'
-alt-n = 'workspace N'
-alt-p = 'workspace P'
-alt-t = 'workspace T'
-alt-w = 'workspace W'
-alt-x = 'workspace X'
-alt-v = 'workspace V'
+alt-1 = 'workspace 1️⃣'
+alt-2 = 'workspace 2️⃣'
+alt-3 = 'workspace 3️⃣'
+alt-4 = 'workspace 4️⃣'
+alt-5 = 'workspace 5️⃣'
+alt-6 = 'workspace 6️⃣'
+alt-7 = 'workspace 7️⃣'
+alt-8 = 'workspace 8️⃣'
+alt-9 = 'workspace 9️⃣'
+alt-b = 'workspace 🌐'
+alt-d = 'workspace 🎨'
+alt-m = 'workspace 📧'
+alt-t = 'workspace 📟'
+alt-w = 'workspace ⚒️'
+alt-x = 'workspace 💬'
+alt-v = 'workspace 🖥️'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#move-node-to-workspace
-alt-shift-1 = 'move-node-to-workspace 1'
-alt-shift-2 = 'move-node-to-workspace 2'
-alt-shift-3 = 'move-node-to-workspace 3'
-alt-shift-4 = 'move-node-to-workspace 4'
-alt-shift-5 = 'move-node-to-workspace 5'
-alt-shift-6 = 'move-node-to-workspace 6'
-alt-shift-7 = 'move-node-to-workspace 7'
-alt-shift-8 = 'move-node-to-workspace 8'
-alt-shift-9 = 'move-node-to-workspace 9'
-alt-shift-b = 'move-node-to-workspace B'
-alt-shift-d = 'move-node-to-workspace D'
-alt-shift-e = 'move-node-to-workspace E'
-alt-shift-m = 'move-node-to-workspace M'
-alt-shift-n = 'move-node-to-workspace N'
-alt-shift-p = 'move-node-to-workspace P'
-alt-shift-t = 'move-node-to-workspace T'
-alt-shift-w = 'move-node-to-workspace W'
-alt-shift-x = 'move-node-to-workspace X'
-alt-shift-v = 'move-node-to-workspace V'
+alt-shift-1 = 'move-node-to-workspace 1️⃣'
+alt-shift-2 = 'move-node-to-workspace 2️⃣'
+alt-shift-3 = 'move-node-to-workspace 3️⃣'
+alt-shift-4 = 'move-node-to-workspace 4️⃣'
+alt-shift-5 = 'move-node-to-workspace 5️⃣'
+alt-shift-6 = 'move-node-to-workspace 6️⃣'
+alt-shift-7 = 'move-node-to-workspace 7️⃣'
+alt-shift-8 = 'move-node-to-workspace 8️⃣'
+alt-shift-9 = 'move-node-to-workspace 9️⃣'
+alt-shift-b = 'move-node-to-workspace 🌐'
+alt-shift-d = 'move-node-to-workspace 🎨'
+alt-shift-m = 'move-node-to-workspace 📧'
+alt-shift-t = 'move-node-to-workspace 📟'
+alt-shift-w = 'move-node-to-workspace ⚒️'
+alt-shift-x = 'move-node-to-workspace 💬'
+alt-shift-v = 'move-node-to-workspace 🖥️'
 
 alt-shift-f = 'fullscreen'
 
@@ -256,40 +251,40 @@ check-further-callbacks = true
 
 [[on-window-detected]]
 if.app-id = 'co.teamport.around'
-run = 'move-node-to-workspace 1'
+run = 'move-node-to-workspace 1️⃣'
 
 [[on-window-detected]]
 if.app-id = 'com.github.wez.wezterm'
-run = 'move-node-to-workspace T'
+run = 'move-node-to-workspace 📟'
 
 [[on-window-detected]]
 if.app-id = 'com.google.Chrome'
-run = 'move-node-to-workspace W'
+run = 'move-node-to-workspace ⚒️'
 
 [[on-window-detected]]
 if.app-id = 'com.apple.Safari'
-run = 'move-node-to-workspace B'
+run = 'move-node-to-workspace 🌐'
 
 [[on-window-detected]]
 if.app-id = 'com.figma.Desktop'
-run = 'move-node-to-workspace D'
+run = 'move-node-to-workspace 🎨'
 
 [[on-window-detected]]
 if.app-id = 'com.tinyspeck.slackmacgap'
-run = 'move-node-to-workspace X'
+run = 'move-node-to-workspace 💬'
 
 [[on-window-detected]]
 if.app-id = 'ru.keepcoder.Telegram'
-run = 'move-node-to-workspace X'
+run = 'move-node-to-workspace 💬'
 
 [[on-window-detected]]
 if.app-id = 'com.flexibits.fantastical2.mac'
-run = 'move-node-to-workspace M'
+run = 'move-node-to-workspace 📧'
 
 [[on-window-detected]]
 if.app-id = 'com.readdle.SparkDesktop-setapp'
-run = 'move-node-to-workspace M'
+run = 'move-node-to-workspace 📧'
 
 [[on-window-detected]]
 if.app-id = 'com.kitze.sizzy'
-run = 'move-node-to-workspace V'
+run = 'move-node-to-workspace 🖥️'
