--- a/home/dot_config/exact_private_aerospace/aerospace.toml
+++ b/home/dot_config/exact_private_aerospace/aerospace.toml
@@ -230,22 +230,22 @@ check-further-callbacks = true
 [[on-window-detected]]
 if.app-id = 'com.jordanbaird.Ice'
 run = 'layout floating'
-check-further-callbacks = true
 
 [[on-window-detected]]
 if.app-id = 'com.macpaw.CleanMyMac-setapp'
 run = 'layout floating'
-check-further-callbacks = true
 
 [[on-window-detected]]
 if.app-id = 'com.iBoysoft.NTFS-Assistant-website-setapp'
 run = 'layout floating'
-check-further-callbacks = true
 
 [[on-window-detected]]
 if.app-id = 'org.languagetool.desktop'
 run = 'layout floating'
-check-further-callbacks = true
+
+[[on-window-detected]]
+if.app-id = 'com.mosyle.macos.business'
+run = 'layout floating'
 
 # assign apps to workspaces
 
