--- a/home/dot_config/exact_private_aerospace/aerospace.toml
+++ b/home/dot_config/exact_private_aerospace/aerospace.toml
@@ -130,7 +130,7 @@ alt-d = 'workspace 🎨'
 alt-m = 'workspace 📧'
 alt-t = 'workspace 📟'
 alt-w = 'workspace ⚒️'
-alt-x = 'workspace 💬'
+alt-y = 'workspace 💬'
 alt-v = 'workspace 🖥️'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#move-node-to-workspace
@@ -148,7 +148,7 @@ alt-shift-d = 'move-node-to-workspace 🎨'
 alt-shift-m = 'move-node-to-workspace 📧'
 alt-shift-t = 'move-node-to-workspace 📟'
 alt-shift-w = 'move-node-to-workspace ⚒️'
-alt-shift-x = 'move-node-to-workspace 💬'
+alt-shift-y = 'move-node-to-workspace 💬'
 alt-shift-v = 'move-node-to-workspace 🖥️'
 
 alt-shift-f = 'fullscreen'
