chore(aerospace): move to workspace command now focuses the window

--- a/home/dot_config/exact_private_aerospace/aerospace.toml
+++ b/home/dot_config/exact_private_aerospace/aerospace.toml
@@ -134,22 +134,22 @@ alt-y = 'workspace 💬'
 alt-v = 'workspace 🖥️'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#move-node-to-workspace
-alt-shift-1 = 'move-node-to-workspace 1️⃣'
-alt-shift-2 = 'move-node-to-workspace 2️⃣'
-alt-shift-3 = 'move-node-to-workspace 3️⃣'
-alt-shift-4 = 'move-node-to-workspace 4️⃣'
-alt-shift-5 = 'move-node-to-workspace 5️⃣'
-alt-shift-6 = 'move-node-to-workspace 6️⃣'
-alt-shift-7 = 'move-node-to-workspace 7️⃣'
-alt-shift-8 = 'move-node-to-workspace 8️⃣'
-alt-shift-9 = 'move-node-to-workspace 9️⃣'
-alt-shift-b = 'move-node-to-workspace 🌐'
-alt-shift-d = 'move-node-to-workspace 🎨'
-alt-shift-m = 'move-node-to-workspace 📧'
-alt-shift-t = 'move-node-to-workspace 📟'
-alt-shift-w = 'move-node-to-workspace ⚒️'
-alt-shift-y = 'move-node-to-workspace 💬'
-alt-shift-v = 'move-node-to-workspace 🖥️'
+alt-shift-1 = 'move-node-to-workspace 1️⃣ --focus-follows-window'
+alt-shift-2 = 'move-node-to-workspace 2️⃣ --focus-follows-window'
+alt-shift-3 = 'move-node-to-workspace 3️⃣ --focus-follows-window'
+alt-shift-4 = 'move-node-to-workspace 4️⃣ --focus-follows-window'
+alt-shift-5 = 'move-node-to-workspace 5️⃣ --focus-follows-window'
+alt-shift-6 = 'move-node-to-workspace 6️⃣ --focus-follows-window'
+alt-shift-7 = 'move-node-to-workspace 7️⃣ --focus-follows-window'
+alt-shift-8 = 'move-node-to-workspace 8️⃣ --focus-follows-window'
+alt-shift-9 = 'move-node-to-workspace 9️⃣ --focus-follows-window'
+alt-shift-b = 'move-node-to-workspace 🌐 --focus-follows-window'
+alt-shift-d = 'move-node-to-workspace 🎨 --focus-follows-window'
+alt-shift-m = 'move-node-to-workspace 📧 --focus-follows-window'
+alt-shift-t = 'move-node-to-workspace 📟 --focus-follows-window'
+alt-shift-w = 'move-node-to-workspace ⚒️ --focus-follows-window'
+alt-shift-y = 'move-node-to-workspace 💬 --focus-follows-window'
+alt-shift-v = 'move-node-to-workspace 🖥️ --focus-follows-window'
 
 alt-shift-f = 'fullscreen'
 
