--- a/home/.chezmoidata/packages.yml
+++ b/home/.chezmoidata/packages.yml
@@ -1,7 +1,7 @@
 packages:
   gh:
     extensions:
-      - "nektos/gh-act"
-      - "joaom00/gh-b"
-      - "github/gh-copilot"
-      - "dlvhdr/gh-dash"
+      - 'nektos/gh-act'
+      - 'joaom00/gh-b'
+      - 'github/gh-copilot'
+      - 'dlvhdr/gh-dash'
