chore(aerospace): add apple podcasts to floating apps

--- a/home/.chezmoidata/aerospace_apps.yml
+++ b/home/.chezmoidata/aerospace_apps.yml
@@ -28,6 +28,7 @@ aerospace_apps:
     - 'com.apple.AppStore'
     - 'com.apple.MobileSMS'
     - 'com.apple.Music'
+    - 'com.apple.podcasts'
     - 'pl.maketheweb.cleanshotx'
     - 'com.1password.1password'
     - 'dev.kdrag0n.MacVirt'
