feat: add ghostty with tmux

--- a/home/.chezmoidata/aerospace_apps.yml
+++ b/home/.chezmoidata/aerospace_apps.yml
@@ -13,6 +13,7 @@ aerospace_apps:
     - 'com.apple.iCal'
   workspace_t:
     - 'com.github.wez.wezterm'
+    - 'com.mitchellh.ghostty'
   workspace_v:
     - 'notion.id'
     - 'com.kitze.sizzy'
