--- a/home/.chezmoiexternal.toml
+++ b/home/.chezmoiexternal.toml
@@ -31,3 +31,10 @@ refreshPeriod = "168h"
 type = "file"
 url = "https://raw.githubusercontent.com/raycast/script-commands/master/commands/apps/lungo/lungo-toggle.sh"
 refreshPeriod = "168h"
+[".tmuxifier"]
+type = "archive"
+url = "https://github.com/jimeh/tmuxifier/archive/master.tar.gz"
+exact = true
+stripComponents = 1
+refreshPeriod = "168h"
+exclude = ["*/.*", "*/examples", "*/layouts"]
