chore: adjust ghostty and tmux keybindings

--- a/home/dot_config/exact_tmux/dot_tmux.conf
+++ b/home/dot_config/exact_tmux/dot_tmux.conf
@@ -1,8 +1,3 @@
-# Prefix Key
-unbind C-b
-set-option -g prefix M-q
-bind M-q send-prefix
-
 ### configure Tmux Plugin Manager
 set-environment -gF TMUX_PLUGIN_MANAGER_PATH '#{HOME}/.local/share/tmux/plugins/'
 
@@ -23,8 +18,11 @@ set -ag terminal-overrides ",xterm-256color:RGB"
 
 set -g mouse on
 
-# start with window number 1
+# Start windows and panes at 1, not 0
 set -g base-index 1
+set -g pane-base-index 1
+set-window-option -g pane-base-index 1
+set-option -g renumber-windows on
 
 # Notifying if other windows has activities
 setw -g monitor-activity on
@@ -39,6 +37,9 @@ unbind '"'
 unbind %
 
 set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
 # Increase scrollback buffer size from 2000 to 50000 lines
 set -g history-limit 50000
@@ -80,6 +81,13 @@ bind-key -T copy-mode-vi C-\\ select-pane -l
 # numToStr/Navigator.nvim integration end
 
 bind-key q kill-pane
+bind -n M-h previous-window
+bind -n M-j previous-window
+bind -n M-k next-window
+bind -n M-l next-window
+
+# Bind clearing the screen
+bind L send-keys '^L'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -87,13 +95,6 @@ set -g @plugin 'catppuccin/tmux#v2.1.2'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'alexwforsythe/tmux-which-key'  # prefix + space
 set -g @plugin 'tmux-plugins/tmux-battery'
-# set -g @plugin 'tmux-plugins/tmux-resurrect'
-# set -g @plugin 'tmux-plugins/tmux-continuum'
-
-# tmux-continuum & tmux-resurrecrt
-# set -g @continuum-restore 'on'
-# set -g @resurrect-capture-pane-contents 'on'
-# set -g @resurrect-strategy-nvim 'session'
 
 set -g @catppuccin_flavor "mocha"
 set -g @catppuccin_window_status_style "rounded"
