--- a/home/dot_config/exact_ghostty/config
+++ b/home/dot_config/exact_ghostty/config
@@ -1,13 +1,13 @@
-# Fonts
+# fonts
 font-family = MonoLisa Variable
 font-family = Symbols Nerd Font Mono
 font-size = 14
 adjust-underline-position = 4
 
-# Mouse
+# mouse
 mouse-hide-while-typing = true
 
-# Theme
+# theme
 theme = catppuccin-mocha
 cursor-style = bar
 cursor-invert-fg-bg = true
@@ -15,7 +15,7 @@ cursor-style-blink = false
 background-opacity = 0.9
 background-blur = 80
 
-# Window
+# window
 gtk-single-instance = true
 gtk-tabs-location = bottom
 gtk-wide-tabs = false
@@ -25,9 +25,16 @@ window-padding-balance = true
 window-decoration = false
 macos-titlebar-style = hidden
 
-# Other
+# other
 copy-on-select = clipboard
 shell-integration = zsh
 shell-integration-features = cursor,sudo,title
 macos-option-as-alt = true
 macos-auto-secure-input = true
+
+
+# keybindings
+keybind=super+shift+w=close_window
+keybind=super+shift+r=reload_config
+
+config-file = ?config-tmux
