chore(tmux): adjust tmux config

--- a/home/dot_config/exact_tmux/dot_tmux.conf
+++ b/home/dot_config/exact_tmux/dot_tmux.conf
@@ -9,7 +9,6 @@ if 'test ! -d "${TMUX_PLUGIN_MANAGER_PATH}/tpm"' {
 
 unbind r
 bind r source-file ~/.tmux.conf
-
 # Undercurl
 set -g default-terminal "${TERM}"
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
@@ -17,6 +16,8 @@ set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{25
 set -ag terminal-overrides ",xterm-256color:RGB"
 set -gq allow-passthrough on
 set -g visual-activity off
+set -g detach-on-destroy off
+set -g status-position bottom 
 
 set -g mouse on
 
@@ -91,28 +92,40 @@ bind L send-keys '^L'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'catppuccin/tmux#v2.1.2'
+set -g @plugin 'catppuccin/tmux#v2.1.3'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'alexwforsythe/tmux-which-key'  # prefix + space
-set -g @plugin 'tmux-plugins/tmux-battery'
 
-set -g @catppuccin_flavor "mocha"
-set -g @catppuccin_window_status_style "rounded"
+set -g @catppuccin_flavor 'mocha'
+set -g @catppuccin_window_status_style 'rounded'
+set -g @catppuccin_status_background 'default'
 set -g @catppuccin_window_number_position 'right'
+set -g @catppuccin_window_flags 'icon'
 set -g @catppuccin_window_status 'yes'
-set -g @catppuccin_window_default_text '#W'
+set -g @catppuccin_window_default_fill 'number'
+set -g @catppuccin_window_default_text ' #W'
 set -g @catppuccin_window_current_fill 'number'
-set -g @catppuccin_window_current_text '#W'
+set -g @catppuccin_window_current_text ' #W'
 set -g @catppuccin_window_current_color '#{E:@thm_surface_2}'
 set -g @catppuccin_date_time_text ' %H:%M'
+
+set -g @catppuccin_window_left_separator ''
+set -g @catppuccin_window_right_separator ''
+
+set -g @catppuccin-status-left-separator  ''
+set -g @catppuccin_status_right_separator ''
+set -g @catppuccin_status_right_separator_inverse 'no'
+set -g @catppuccin_status_fill 'icon'
+set -g @catppuccin_status_connect_separator 'no'
+
+set -g @catppuccin_window_flags_icon_zoom ' '
+set -g @catppuccin_window_flags_icon_format '##{?window_zoomed_flag,#{E:@catppuccin_window_flags_icon_zoom},}'
+set -g @catppuccin_status_modules_right "application session date_time"
 
 set -g status-left-length 100
 set -g status-right-length 100
 set -g status-left '#{E:@catppuccin_status_session} '
-set -g status-right '#{E:@catppuccin_status_directory} '
-set -agF status-right '#{E:@catppuccin_status_application} '
-set -agF status-right '#{E:@catppuccin_status_battery} '
-set -agF status-right '#{E:@catppuccin_status_date_time} '
+set -g status-right '#{E:@catppuccin_status_directory} #{E:@catppuccin_status_application} #{E:@catppuccin_status_date_time}'
 
 # initialize tmux plugin manager and source all plugins (keep this line at the very bottom of tmux.conf)
 run '#{TMUX_PLUGIN_MANAGER_PATH}/tpm/tpm'
