chore: adjust ruby lsp gemfile

--- a/home/exact_dot_ruby-lsp/Gemfile
+++ b/home/exact_dot_ruby-lsp/Gemfile
@@ -12,4 +12,6 @@ gem 'rubocop-rspec'
 gem 'rubocop-shopify'
 gem 'rubocop-thread_safety'
 gem 'ruby-lsp'
+gem 'ruby-lsp-rails'
+gem 'ruby-lsp-rspec'
 gem 'test-prof'
