feat: moar plugins and move tmux to top

--- a/home/dot_config/exact_tmux/dot_tmux.conf
+++ b/home/dot_config/exact_tmux/dot_tmux.conf
@@ -17,7 +17,7 @@ set -ag terminal-overrides ",xterm-256color:RGB"
 set -gq allow-passthrough on
 set -g visual-activity off
 set -g detach-on-destroy off
-set -g status-position bottom 
+set -g status-position top 
 
 set -g mouse on
 
