--- a/home/dot_config/exact_tmux/dot_tmux.conf
+++ b/home/dot_config/exact_tmux/dot_tmux.conf
@@ -84,8 +84,8 @@ bind-key -T copy-mode-vi C-\\ select-pane -l
 # numToStr/Navigator.nvim integration end
 
 bind-key q kill-pane
-bind -n M-h previous-window
-bind -n M-l next-window
+bind -n M-H previous-window
+bind -n M-L next-window
 
 # Bind clearing the screen
 bind L send-keys '^L'
